# Nexus

./: CMakeLists.txt  README.md
docs/: ARCHITECTURE.md
scripts/: build.sh  run.sh
src/: main.cpp
src/core/: Application.cpp  Application.h
src/particles/: CoreParticle.cpp  CoreParticle.h  ParticleSystem.cpp  ParticleSystem.h
src/particles/Emitters/: BaseEmitter.cpp  BaseEmitter.h  MouseEmitterController.cpp  MouseEmitterController.h  PointEmitter.cpp  PointEmitter.h
src/physics/: SpatialHash.cpp  SpatialHash.h
src/rendering/: Renderer.cpp  Renderer.h
src/ui/: UIManager.cpp  UIManager.h
src/utils/Math/: Vector2.cpp  Vector2.h
test/: test_sfml.cpp  test_sfml_simple.cpp
